--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>Kotak_Bank_App</finalName>
+    <finalName>01-maven-web-app</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
